Minor fix to keep consistency on aggregator
